--- a/public/themes/ekart/assets/css/custom.css
+++ b/public/themes/ekart/assets/css/custom.css
@@ -51,7 +51,7 @@ a:visited, a:link {
     height: 50px !important;
     border-radius: 10px;
 }
-.ps-breadcrumb {
+.ps-page--my-account .ps-breadcrumb {
     background-color: #fff;
 }
 .address-holder {
