admin vendor request view and hot categories

--- a/public/themes/ekart/assets/css/custom.css
+++ b/public/themes/ekart/assets/css/custom.css
@@ -754,3 +754,7 @@ a:visited, a:link {
     height: 70vh !important;
     object-fit: cover;
 }
+
+.ps-block--category {
+    position: relative;
+}
