--- a/public/themes/ekart/assets/css/custom.css
+++ b/public/themes/ekart/assets/css/custom.css
@@ -188,7 +188,7 @@ a:visited, a:link {
 
 .ps-product .ps-product__thumbnail img {
     width: 250px;
-    aspect-ratio: 4/3;
+    aspect-ratio: 1/1;
     object-fit: cover;
 }
 
@@ -774,4 +774,10 @@ a:visited, a:link {
 }
 .hot-cat .VueCarousel .VueCarousel-inner {
     justify-content: start;
+}
+.vendor-store .ps-product .ps-product__container {
+    padding: 10px;
+}
+.ps-btn:active, .ps-btn:hover, button.ps-btn:active, button.ps-btn:hover {
+    border: none;
 }
