--- a/public/themes/ekart/assets/css/custom.css
+++ b/public/themes/ekart/assets/css/custom.css
@@ -773,7 +773,7 @@ a:visited, a:link {
 .ps-list--social-color li a.instagram:hover {
     background-color: #ff00ffbb;
 }
-.hot-cat .VueCarousel .VueCarousel-inner {
+.hot-cat .VueCarousel .VueCarousel-inner, .ps-block--shop-features .VueCarousel .VueCarousel-inner {
     justify-content: start;
 }
 /* .vendor-store .ps-product .ps-product__container {
@@ -784,4 +784,9 @@ a:visited, a:link {
 }
 .ps-btn:active, .ps-btn:hover, button.ps-btn:active, button.ps-btn:hover {
     border: none;
+}
+.ps-product.ps-product--wide .ps-product__thumbnail img {
+    height: 100%;
+    aspect-ratio: 4/3;
+    object-fit: cover;
 }
