--- a/public/themes/ekart/assets/css/custom.css
+++ b/public/themes/ekart/assets/css/custom.css
@@ -793,3 +793,17 @@ a:visited, a:link {
 .menu>li.has-mega-menu .mega-menu {
     transform: translateX(-34%) !important;
 }
+@media(max-width:767.98px) {
+    
+    .custom-slider {
+        aspect-ratio: 4/3;
+        /* height: 40vh; */
+    }
+    .slider-banner-icon {
+        width: 100%;
+        height: 100% !important;
+    }
+    .ps-footer__widgets {
+        padding-bottom: 0;
+    }
+}
