--- a/public/themes/ekart/assets/css/custom.css
+++ b/public/themes/ekart/assets/css/custom.css
@@ -807,3 +807,22 @@ a:visited, a:link {
         padding-bottom: 0;
     }
 }
+
+.pagination .page-item {
+    padding: 0 14px !important;
+    position: relative;
+    display: inline-block;
+    z-index: 30;
+    color: #999;
+    line-height: 32px;
+    border: none;
+    background-color: #f5f5f5;
+    color: #000;
+    vertical-align: middle;
+    font-size: 14px;
+}
+
+.pagination .page-item.active {
+    background-color: #fcb800;
+    color: #000;
+}
