--- a/public/themes/ekart/assets/css/custom.css
+++ b/public/themes/ekart/assets/css/custom.css
@@ -826,3 +826,37 @@ a:visited, a:link {
     background-color: #fcb800;
     color: #000;
 }
+
+.mega-menu { 
+    flex-wrap: wrap;
+    justify-content:start ;
+}
+
+.mega-menu .mega-menu__column {
+    min-width: 20%;
+    width:20% ;
+}
+
+.menu>li.has-mega-menu {
+    position: unset;
+}
+
+.navigation__right {
+    position: relative;
+}
+
+.menu>li>a {
+    font-size:13px; 
+    font-weight:500;
+}
+
+.mega-menu h4 {
+    font-weight: 800;
+    color: purple; 
+}
+
+.menu>li.has-mega-menu .mega-menu {
+    transform: none !important;
+    left: 0;
+    right: 0 ;
+}
