--- a/public/themes/ekart/assets/css/custom.css
+++ b/public/themes/ekart/assets/css/custom.css
@@ -933,3 +933,7 @@ a:visited, a:link {
 .ant-menu-inline.ant-menu-root .ant-menu-item>.ant-menu-title-content, .ant-menu-inline.ant-menu-root .ant-menu-submenu-title>.ant-menu-title-content {
     flex: none;
 }
+
+/*
+Line 45043 ,45035 for hover
+*/
