--- a/public/themes/ekart/assets/css/custom.css
+++ b/public/themes/ekart/assets/css/custom.css
@@ -194,7 +194,7 @@ a:visited, a:link {
 .ps-product .ps-product__thumbnail img {
     width: 100%;
     aspect-ratio: 4/3;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .ps-product--wide .ps-product__desc {
