--- a/public/themes/ekart/assets/css/custom.css
+++ b/public/themes/ekart/assets/css/custom.css
@@ -965,3 +965,55 @@ a:visited, a:link {
 /*
 Line 45043 ,45035 for hover
 */
+
+.ps-product.ps-product-new {
+    padding: 0;
+}
+
+.ps-product.ps-product-new:hover {
+    border:none;
+}
+
+.ps-product.ps-product-new .ps-product__thumbnail img {
+    object-fit: cover;
+}
+
+.ps-product.ps-product-new .ps-product__actions {
+    padding: 5px 0;
+}
+
+.ps-product.ps-product-new .ps-product__container {
+    padding: 10px 20px;
+    background-color: #f7f7f7;
+}
+
+.match-height .VueCarousel .VueCarousel-inner {
+    justify-content: start;
+}
+
+.ps-product.ps-product-new .ps-product__title {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+    --max-lines: 2 !important;
+}
+
+@media (min-width: 991px) {
+    .ps-product.ps-product-new .ps-product__title {
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+        text-overflow: ellipsis;
+        --max-lines: 3 !important;
+    }
+}
+
+.VueCarousel-dot-container {
+    margin-top: 0 !important;
+}
+
+.VueCarousel-dot {
+    margin-top: 0 !important;
+    margin-bottom: 10px !important;
+}
