--- a/public/themes/ekart/assets/css/custom.css
+++ b/public/themes/ekart/assets/css/custom.css
@@ -688,7 +688,7 @@ a:visited, a:link {
     left: 15px;
     margin-top: 10px;
     overflow: hidden;
-    padding: 0;
+    padding-bottom: 35px;
     position: relative;
     z-index: 99;
 }
@@ -1027,24 +1027,24 @@ Line 45043 ,45035 for hover
     justify-content: start;
 }
 
-.product-gallery .arrow {
-    align-items: end;
+.thumb-list .arrow {
     cursor: pointer;
-    display: flex;
-    height: 100%;
     left: 45%;
-    color: #fcb80077;
-    opacity: .5;
+    bottom: 0;
+    color: #fcb800aa;
     position: absolute;
     z-index: 1001;
 }
 
-.product-gallery .arrow.right {
+.thumb-list .arrow.right {
     left: unset;
     right: 45%;
 }
 
-
-.product-gallery .arrow:hover {
+.thumb-list .arrow:hover {
     color: #fcb800;
+}
+
+.navigation-hide .VueCarousel-navigation, .pagination-hide .VueCarousel-pagination {
+    display: none;
 }
